--- a/pages/GroupRef.html
+++ b/pages/GroupRef.html
@@ -154,13 +154,14 @@
         
         <div class="box">
             <h3>What Went Well:</h3>
-            <p></p>
+            <p>Having worked well together on assignment 2 working through assignment 3/5 has been a lot smoother of an experience. We have communicated well over Microsoft Teams while using OneNote for the basis of our assignments. Meetings have been kept to a minimum with everyone knowing what is expected of them, so everyone is able to focus of their tasks and updating OneNote as they progress. With two group assignments due at the same time there was concern this could split up the group and spread our resources too thin, but the group has managed the workload well and managed to complete both assignments on time. </p>
             <h3>What Could Be Improved:</h3>
-            <p></p>
+            <p>Having done so well on assignment 2 and with how smoothly assignment 3/5 have gone there hasn't been much space for improvement. That being said having everyone in a similar time zone and with similar work schedules would make attendance at group meetings easier. As these issues that are beyond anyone's control they cannot really be improved upon. </p>
             <h3>What Was Surprising:</h3>
-            <p></p>
+            <p>As a group we were able to identify one of our major weaknesses for this project, being a lack of communication particularly in the beginning phases. This could be due to time zone differences, current world events, or even prior work commitments. This lapse in communication early on resulted in some of the team feeling the assigning of tasks was delayed resulting in some members having trouble with deadlines.  
+While the team did try to distribute the work evenly, there was some opportunity to share the tasks more evenly throughout the team. By improving communication methods and working towards more collaboration in the team, the above matters would be negligible.  </p>
             <h3>What Have You Learnt About Groups:</h3>
-            <p></p>
+            <p>Coming to the end of the last of the assignments it was clear to all of us that communicating between one and other and being open about what is happening around the clock really helped get everyone through the assignments as it had done in previous times. The biggest lesson we learnt as a group is that life can and always will get in the way and i think groups has taught us that with appropriate planning  and regular catch ups, that meeting deadlines, be it assignments or not, anything is possible. </p>
             <br>
             <br>
         </div>
