--- a/pages/Tools-Tech.html
+++ b/pages/Tools-Tech.html
@@ -43,6 +43,10 @@
           <li>Linux Distribution - Debian</li>
           <li>SSH Protocol</li>
           <li>Nginx</li>
+          <li>Git</li>
+        </ul>
+        Our gitbhub audit trail somewhat represents the amount of work conribuuted by each team member, though majority of our team work was done using other collaborative tools such as Microsoft Teams.  We have attempted to
+         collaborate, each commiting our oen changces, though some team memebers worked more on other parts of the project such a the concept pitch video, which is note represented in github.
         </ul>
         All of these tools/resources/software's are open source and readily available to anyone making them ideal for us to use in our product/project without the need for purchasing anything. 
         <br />
