--- a/pages/Tools-Tech.html
+++ b/pages/Tools-Tech.html
@@ -45,8 +45,8 @@
           <li>Nginx</li>
           <li>Git</li>
         </ul>
-        Our github audit trail somewhat represents the amount of work conribuuted by each team member, though majority of our team work was done using other collaborative tools such as Microsoft Teams.  We have attempted to
-         collaborate, each commiting our oen changces, though some team members worked more on other parts of the project such a the concept pitch video, which is note represented in github.
+        Our github audit trail somewhat represents the amount of work conributed by each team member, though majority of our team work was done using other collaborative tools such as Microsoft Teams.  We have attempted to
+         collaborate, each commiting our own changces, though some team members worked more on other parts of the project such a the concept pitch video, which is note represented in github.
         </ul>
         <br />
         <br />
