--- a/pages/Tools-Tech.html
+++ b/pages/Tools-Tech.html
@@ -59,6 +59,42 @@
         Our group as a whole have had some prior experience in the tools and software listed such as Python, but many of us have not had to deal with software and tools such as RRDTool or Nagios. Through the setup of H.A.M.S, Sam has created, implemented and got the hardware and software set up through the use of a Raspberry Pi device. From this, team members have been able to learn along the way and research topics that we were newly introduced too, expanding our knowledge of devices, software and hardware in relation to our project.  
       </div>
     </main>
+  <main>
+      <div class="title">
+        <h2>Tools</h2>
+      </div>
+      <div class="box">
+        <h2>Tools Used</h2>
+        <ul>
+          <li>GitHub</li>
+          <li>Grammarly</li>
+          <li>Microsoft Teams</li>
+          <li>Microsoft OneNote</li>
+          <li>Microsoft Word</li>
+          <li>TeXworks</li>
+          <li>Textadept</li>
+        </ul>
+        
+        <h2>GitHub</h2>
+        GitHub was used for the groups Git repository and to host the group website, GitHub is easy to use and the GitHub pages feature makes it easy to host a website.
+
+        <h2>Grammarly</h2>
+Grammarly was used to help with spell checking and sentence structures, after problems with nonsense suggestions, it was not used anymore.
+
+<h2>Microsoft Teams</h2>
+Microsoft Teams (Teams for short) was the main form of communication used for this assessment, Teams made it easy for group members to share files and the extra features, like the calendar, made it easy to plan meetings in advanced.
+
+<h2>Microsoft OneNote</h2>
+Microsoft OneNote (OneNote for short) was the main program used for writing, OneNote made it easy for group members to collaborate on a piece of writing. The tab and page features in OneNote made it easy to organize the writing sections in our assessment.
+
+<h2>Microsoft Word</h2>
+Microsoft Word (Word for short) was initially used for writing the report, after some discussion, it was agreed that the document would be written in LaTeX
+
+<h2>TeXworks</h2>
+TeXworks was used to write the document in LaTeX, it is a simple, multi-platform front-end program that makes writing in LaTeX easy.
+
+      </div>
+    </main>
     <p class="title" style="margin-top: 15px; margin-bottom: 15px;"><b>Team 18 - Creative Protocol&#169 2020</b></p>
   </body>
 </html>
