--- a/pages/Tools-Tech.html
+++ b/pages/Tools-Tech.html
@@ -76,22 +76,22 @@
         </ul>
         
         <h3>GitHub</h3>
-        GitHub was used for the groups Git repository and to host the group website, GitHub is easy to use and the GitHub pages feature makes it easy to host a website.
+        <p>GitHub was used for the groups Git repository and to host the group website, GitHub is easy to use and the GitHub pages feature makes it easy to host a website.</p>
 
         <h3>Grammarly</h3>
-Grammarly was used to help with spell checking and sentence structures, after problems with nonsense suggestions, it was not used anymore.
+<p>Grammarly was used to help with spell checking and sentence structures, after problems with nonsense suggestions, it was not used anymore.</p>
 
 <h3>Microsoft Teams</h3>
-Microsoft Teams (Teams for short) was the main form of communication used for this assessment, Teams made it easy for group members to share files and the extra features, like the calendar, made it easy to plan meetings in advanced.
+<p>Microsoft Teams (Teams for short) was the main form of communication used for this assessment, Teams made it easy for group members to share files and the extra features, like the calendar, made it easy to plan meetings in advanced.</p>
 
 <h3>Microsoft OneNote</h3>
-Microsoft OneNote (OneNote for short) was the main program used for writing, OneNote made it easy for group members to collaborate on a piece of writing. The tab and page features in OneNote made it easy to organize the writing sections in our assessment.
+<p>Microsoft OneNote (OneNote for short) was the main program used for writing, OneNote made it easy for group members to collaborate on a piece of writing. The tab and page features in OneNote made it easy to organize the writing sections in our assessment.</p>
 
 <h3>Microsoft Word</h3>
-Microsoft Word (Word for short) was initially used for writing the report, after some discussion, it was agreed that the document would be written in LaTeX
+<p>Microsoft Word (Word for short) was initially used for writing the report, after some discussion, it was agreed that the document would be written in LaTeX.</p>
 
 <h3>TeXworks</h3>
-TeXworks was used to write the document in LaTeX, it is a simple, multi-platform front-end program that makes writing in LaTeX easy.
+<p>TeXworks was used to write the document in LaTeX, it is a simple, multi-platform front-end program that makes writing in LaTeX easy.</p>
 
       </div>
     </main>
