--- a/pages/Tools-Tech.html
+++ b/pages/Tools-Tech.html
@@ -93,6 +93,8 @@
 <h3>TeXworks</h3>
 <p>TeXworks was used to write the document in LaTeX, it is a simple, multi-platform front-end program that makes writing in LaTeX easy.</p>
 
+<h3>Textadept</h3>
+<p>Textadept is a fast, minimalist, and remarkably extensible cross-platform text editor. </p>
       </div>
     </main>
     <p class="title" style="margin-top: 15px; margin-bottom: 15px;"><b>Team 18 - Creative Protocol&#169 2020</b></p>
