--- a/pages/Tools-Tech.html
+++ b/pages/Tools-Tech.html
@@ -61,7 +61,7 @@
     </main>
   <main>
       <div class="title">
-        <h2>Tools</h2>
+        <h2>Team Tools</h2>
       </div>
       <div class="box">
         <h3>Tools Used</h3>
